--- a/src/assets/fonts/fonts.scss
+++ b/src/assets/fonts/fonts.scss
@@ -137,6 +137,20 @@
   font-weight: 600;
 }
 
+@font-face {
+  font-family: "Scala Sans";
+  src: url("SourceSansPro-Bold.ttf");
+  font-style: normal;
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: "Scala Sans";
+  src: url("SourceSansPro-BoldItalic.ttf");
+  font-style: italic;
+  font-weight: 600;
+}
+
 // Slab
 
 @font-face {
