--- a/src/app/modules/book/components/accordion/accordion.component.html
+++ b/src/app/modules/book/components/accordion/accordion.component.html
@@ -1,18 +1,21 @@
 
-<ion-item (click)="toggleAccordion()">
-  <ion-icon slot="start" name="book-outline"></ion-icon>
-  <ion-label class="ion-text-wrap">{{ chapter.title }}</ion-label>
-  <ion-icon *ngIf="!isMenuOpen" slot="end" name="chevron-down-outline"></ion-icon>
-  <ion-icon *ngIf="isMenuOpen" slot="end" name="chevron-up-outline"></ion-icon>
-</ion-item>
+<div>
+  <ion-item (click)="toggleAccordion()" class="chapter">
+<!--    <ion-icon slot="start" name="book-outline"></ion-icon>-->
+    <ion-label class="ion-text-wrap">{{ chapter.title }}</ion-label>
+    <ion-icon *ngIf="!isMenuOpen" slot="end" name="chevron-down-outline"></ion-icon>
+    <ion-icon *ngIf="isMenuOpen" slot="end" name="chevron-up-outline"></ion-icon>
+  </ion-item>
 
-<div [ngClass]="this.isMenuOpen ? 'active' : 'inactive'">
+  <div [ngClass]="this.isMenuOpen ? 'active' : 'inactive'">
 
-  <ion-list>
-    <ion-item *ngFor="let section of chapter.sections" (click)="readSection(section)">
-      <ion-icon class="section-icon" slot="start" name="remove-circle-outline"></ion-icon>
-      <ion-label class="ion-text-wrap section-label">{{ section.title }}</ion-label>
-    </ion-item>
-  </ion-list>
+    <ion-list>
+      <ion-item *ngFor="let section of chapter.sections" (click)="readSection(section)" class="section">
+        <!--<ion-icon class="section-icon" slot="start" name="remove-circle-outline"></ion-icon>-->
+        <ion-icon class="section-icon" slot="start" name="chevron-forward-outline"></ion-icon>
+        <ion-label class="ion-text-wrap section-label">{{ section.title }}</ion-label>
+      </ion-item>
+    </ion-list>
 
+  </div>
 </div>
