--- a/src/app/modules/book/pages/reader/reader.page.scss
+++ b/src/app/modules/book/pages/reader/reader.page.scss
@@ -1,8 +1,23 @@
+ion-header {
+  color: #0d0d0d;
+  ion-toolbar {
+    color: #0d0d0d;
+    ion-button {
+      color: #0d0d0d;
+    }
+  }
+}
+
 ion-content {
   --padding-start: 24px;
   --padding-end: 24px;
   --padding-top: 24px;
   --padding-bottom: 24px;
+
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
 
   &.theme-white {
     --background: #FFFFFF;
@@ -20,6 +35,23 @@ ion-content {
     --background: #121212;
     --color: #EDEEF2;
   }
+
+  ::ng-deep .custom-css {
+    figure.table {
+      overflow-x: scroll;
+      margin: 0;
+      table {
+        tbody {
+          tr {
+            td {
+              padding: 4px;
+            }
+          }
+        }
+      }
+    }
+  }
+
 }
 
 .font-contemporary {
@@ -102,7 +134,6 @@ ion-content {
     line-height: 1.9;
   }
 }
-
 .font-regular {
   &.line-space-small {
     line-height: 1.5;
