--- a/src/app/modules/book/pages/textbook/textbook.page.html
+++ b/src/app/modules/book/pages/textbook/textbook.page.html
@@ -4,22 +4,43 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>
-      {{ book.title }}
+      {{ book?.title }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-list lines="full">
-    <ng-container *ngFor="let chapter of chapters">
-      <ion-item *ngIf="!chapter.sectionable" (click)="readChapter(chapter)" >
-        <ion-icon slot="start" name="reader-outline"></ion-icon>
-        <ion-label  class="ion-text-wrap">{{ chapter.title }}</ion-label>
-      </ion-item>
+  <div class="title">
+    <h3 class="table-of-contents">Table of Contents</h3>
+  </div>
+  <ng-container *ngIf="!loading else skeleton">
+    <ion-list lines="full">
+      <ng-container *ngFor="let chapter of chapters">
+        <ion-item *ngIf="!chapter.sectionable" (click)="readChapter(chapter)" >
+<!--          <ion-icon slot="start" name="reader-outline"></ion-icon>-->
+<!--          <ion-icon slot="start" name="book-outline"></ion-icon>-->
+          <ion-label class="ion-text-wrap">{{ chapter.title }}</ion-label>
+        </ion-item>
 
-      <ng-container *ngIf="chapter.sectionable">
-        <app-accordion [chapter]="chapter" (onClick)="readSection($event, chapter)"></app-accordion>
+        <ng-container *ngIf="chapter.sectionable">
+          <app-accordion [chapter]="chapter" (onClick)="readSection($event, chapter)"></app-accordion>
+        </ng-container>
       </ng-container>
-    </ng-container>
-  </ion-list>
+    </ion-list>
+  </ng-container>
 </ion-content>
+
+<ng-template #skeleton>
+  <ion-list>
+    <ion-item *ngFor="let item of skeletons">
+      <ion-thumbnail slot="start">
+        <ion-skeleton-text></ion-skeleton-text>
+      </ion-thumbnail>
+      <ion-label>
+        <h3>
+          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+        </h3>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+</ng-template>
