--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,13 +74,18 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-font-family: "Scala Sans", "Roboto", sans-serif
+
 }
 
-@media (prefers-color-scheme: dark) {
-  /*
+
+
+/*@media (prefers-color-scheme: dark) {
+  !*
    * Dark Colors
    * -------------------------------------------
-   */
+   *!
 
   body {
     --ion-color-primary: #428cff;
@@ -147,10 +152,10 @@
     --ion-color-light-tint: #383a3e;
   }
 
-  /*
+  !*
    * iOS Dark Theme
    * -------------------------------------------
-   */
+   *!
 
   .ios body {
     --ion-background-color: #000000;
@@ -191,10 +196,10 @@
   }
 
 
-  /*
+  !*
    * Material Design Dark Theme
    * -------------------------------------------
-   */
+   *!
 
   .md body {
     --ion-background-color: #121212;
@@ -233,4 +238,4 @@
 
     --ion-card-background: #1e1e1e;
   }
-}
+}*/
