--- a/src/app/modules/book/pages/textbook/textbook.page.scss
+++ b/src/app/modules/book/pages/textbook/textbook.page.scss
@@ -26,6 +26,7 @@ ion-content {
     margin: 10px 16px;
     border: 2px solid #0d0d0d;
     border-radius: 12px;
+    text-transform: none;
 
     ion-icon {
       font-size: 26px;
@@ -35,7 +36,7 @@ ion-content {
     ion-label {
       font-family: "Scala Sans", "Roboto", sans-serif;
       font-weight: bold;
-      text-transform: uppercase;
+      text-transform: none;
     }
   }
 }
