update Ad showing flow

--- a/src/app/modules/book/components/reader-setting/reader-setting.component.html
+++ b/src/app/modules/book/components/reader-setting/reader-setting.component.html
@@ -15,7 +15,7 @@
           <ion-select-option value="postmodern">Postmodern</ion-select-option>
           <ion-select-option value="slab">Slab</ion-select-option>
           <ion-select-option value="vintage">Vintage</ion-select-option>
-          <ion-select-option value="">Regular</ion-select-option>
+          <ion-select-option value="regular">Regular</ion-select-option>
         </ion-select>
       </ion-col>
     </ion-row>
