--- a/src/app/modules/book/pages/reader/reader.page.html
+++ b/src/app/modules/book/pages/reader/reader.page.html
@@ -20,7 +20,7 @@
                         'theme-grey': settings.theme === 'grey',
                         'theme-dark': settings.theme === 'dark'}">
 
-  <div [ngClass]="{ 'font-regular': settings.font === 'none',
+  <div [ngClass]="{ 'font-regular': settings.font === 'regular',
                     'font-contemporary': settings.font === 'contemporary',
                     'font-geometric': settings.font === 'geometric',
                     'font-modern': settings.font === 'modern',
