--- a/src/app/modules/home/home.page.scss
+++ b/src/app/modules/home/home.page.scss
@@ -16,7 +16,8 @@ ion-content {
     ion-row {
       ion-col.primary-book-title {
         h3 {
-          font-size: 17px;
+          font-size: 18px;
+          font-weight: bold;
           margin: 8px 0;
         }
         h5 {
