--- a/src/app/modules/book/pages/textbook/textbook.page.html
+++ b/src/app/modules/book/pages/textbook/textbook.page.html
@@ -33,12 +33,15 @@
 <ng-template #skeleton>
   <ion-list>
     <ion-item *ngFor="let item of skeletons">
-      <ion-thumbnail slot="start">
+      <!--<ion-thumbnail slot="start">
         <ion-skeleton-text></ion-skeleton-text>
-      </ion-thumbnail>
+      </ion-thumbnail>-->
       <ion-label>
         <h3>
-          <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
+          <ion-skeleton-text
+            animated
+            style="width: 100%; height: 20px">
+          </ion-skeleton-text>
         </h3>
       </ion-label>
     </ion-item>
